Fixed courseYear = 1 Bug
I don't even know how this slipped past me, but I set the courseYear to 1 because of some method switch-uppery. Now it's fixed.